# DevBase

./: .cursorrules  .gitignore  run_dev.sh
dev-back/: .env.example  README.md  config.py  database.py  main.py  models.py  pyproject.toml
dev-back/alembic/: env.py
dev-back/alembic/versions/: 44e9454feb29_renamed_column_project_ids_to_repos.py  94ba836bda04_initial_migration.py  b75359337018_add_user_id_column_to_cde_configured_.py
dev-back/controllers/: auth_controller.py  configured_project_controller.py  dependencies.py  github_controller.py
dev-front/: .gitignore  package-lock.json  package.json
dev-front/app/: globals.css  layout.tsx  page.tsx
dev-front/components/: dev-header.tsx
dev-front/components/code/: app-view-panel.tsx  code-layout.tsx  code-view-panel.tsx  configured-project-view-panel.tsx
dev-front/components/dialogs/: select-popup.tsx
dev-front/components/shared/: chat-panel.tsx
dev-front/contexts/: auth-context.tsx  dialog-context.tsx  view-context.tsx
dev-front/contexts/code/: code-action-functions.tsx  code-actions-context.tsx  code-configure-project-form-context.tsx  code-context.tsx  (+3 more)
dev-front/lib/: api.ts  shared.ts
dev-front/types/: shared.ts  view-mode.ts
dev-gateway/: .gitignore  Dockerfile  gateway.Dockerfile  mvnw  mvnw.cmd  pom.xml  pyproject.toml  storage.Dockerfile
dev-gateway/devgateway/: __init__.py
dev-manager/: main.py  pyproject.toml
dev-manager/dev_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dev-manager/devmanager/: __init__.py  auth.py  config.py  gateway_manager.py  routes.py
(+39 files in other folders)
